
  * assistant, watcher: .gitignore files and other git ignores are now
    honored, when git 1.8.4 or newer is installed.
    (Thanks, Adam Spiers, for getting the necessary support into git for this.)
  * importfeed: Ignores transient problems with feeds. Only exits nonzero
    when a feed has repeatedly had a problems for at least 1 day.
  * importfeed: Fix handling of dots in extensions.

 -- Joey Hess <joeyh@debian.org>  Fri, 02 Aug 2013 19:26:20 -0400

git-annex (4.20130802) unstable; urgency=low

  * dropunused behavior change: Now refuses to drop the last copy of a
    file, unless you use the --force.
    This was the last place in git-annex that could remove data referred
    to by the git history, without being forced.
    Like drop, dropunused checks remotes, and honors the global
    annex.numcopies setting. (However, .gitattributes settings cannot
    apply to unused files.) 
  * Fix inverted logic in last release's fix for data loss bug,
    that caused git-annex sync on FAT or other crippled filesystems to add
    symlink standin files to the annex.
  * importfeed can be used to import files from podcast feeds.
  * webapp: When setting up a dedicated ssh key to access the annex
    on a host, set IdentitiesOnly to prevent the ssh-agent from forcing
    use of a different ssh key. That could result in unncessary password
    prompts, or prevent git-annex-shell from being run on the remote host.
  * webapp: Improve handling of remotes whose setup has stalled.
  * Add status message to XMPP presence tag, to identify to others that
    the client is a git-annex client. Closes: #717652
  * webapp: When creating a repository on a removable drive, set
    core.fsyncobjectfiles, to help prevent data loss when the drive is yanked.
  * Always build with -threaded, to avoid a deadlock when communicating with
    gpg.
  * unused: No longer shows as unused tmp files that are actively being
    transferred.