@@ -3,7 +3,6 @@ now! --[[Joey]]
 
 ## status
 
-* Does not support encryption with gpg.
 * Does not work with Cygwin's build of git (that git does not consistently
   support use of DOS style paths, which git-annex uses on Windows). 
   Must use the upstream build of git for Windows.
